bugfixes, phase 3 improvements
